# bitcoin-spv

./: .eslintrc.js  .gitignore  .gitmodules  .solcover.js  .travis.yml  BTCUtils.sol  LICENSE  LICENSE-APACHE2.md  LICENSE-MIT.md  Pipfile  README.md  SigCheck.sol  ValidateSPV.sol  compile.js  go.mod  go.sum  package-lock.json  package.json  run_tests.sh  testProofs.json  testVectors.json  truffle-config.js  works_for_me.sh
.github/workflows/: contracts.yml
btcutils/: btc_utils.go
c/: Cargo.toml  Makefile  README.md  risc.Makefile
c/csrc/: btcspv.c  btcspv.h  check_btcspv.c  evalspv.c  evalspv.h  main.c  swap-demo.c  test_utils.h
c/src/: lib.rs  test_utils.rs
clients/: BcoinClient.js
contracts/: BTCUtils.sol  BTCUtilsDelegate.sol  BytesLib.sol  CheckBitcoinSigs.sol  CheckBitcoinSigsDelegate.sol  Relay.sol  SPV.sol  SPVStore.sol  SafeMath.sol  SigCheck.sol  ValidateSPV.sol  ValidateSPVDelegate.sol
contracts-js/: BTCUtils.js  ValidateSPV.js
contracts/test/: BTCUtilsTest.sol  ValdiateSPVTest.sol
golang/: .gitignore  README.md  go.mod  go.sum
golang/btcspv/: bitcoin_spv.go  bitcoin_spv_test.go  bitcoin_spv_test_types.go  coverage.out  types.go  types_test.go  utils.go  utils_test.go  utils_test_types.go  validate_spv.go  validate_spv_test.go  validate_spv_test_types.go
golang/cli/: header.go  prove.go  spvcli.go  vin.go  vout.go
golang/examples/: examples.go  header.go  main.go  vin.go  vout.go
golang/utils/: btc_utils.go  utils_test.go
javascript/: BTCUtils.js  ValidateSPV.js
js/: .gitignore  README.md  package-lock.json  package.json
js/.nyc_output/: eb6e0da2-436f-49a9-ae6a-d1e3d58d643f.json
js/clients/: .eslintignore  .eslintrc.js  README.md  package-lock.json  package.json
js/lib/: BTCUtils.js  ValidateSPV.js  ripemd160.js  sha256.js
js/src/: BTCUtils.js  ValidateSPV.js  index.js  ser.js  sighash.js  types.js  utils.js
js/test/: BTCUtils.test.js  BTCUtilsJs.test.js  ValidateSPV.test.js  ValidateSPVJs.test.js  constants.js  ser.test.js  sighash.test.js  utils.test.js
js/utils/: ripemd160.js  sha256.js  utils.js
python/: .coveragerc  .gitignore  Pipfile  README.md  setup.py
python/btcspv/: __init__.py  ser.py  types.py  utils.py  validate_spv.py
python/btcspv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rust/: .gitignore  Cargo.toml  README.md
rust/src/: btcspv.rs  lib.rs  macros.rs  std_types.rs  types.rs  utils.rs  validatespv.rs
rust/src/wasm/: btcspv.rs  mod.rs  utils.rs  validatespv.rs
scripts/: header_chain.py  log_config.py  merkle.py
scripts/tests/: helpers.py  (+1 more)
solidity/: .eslintrc.js  .gitignore  .solcover.js  .soliumignore  README.md  package-lock.json  package.json  truffle-config.js
test/: BTCUtils.test.js  BTCUtilsJs.test.js  CheckBitcoinSigs.test.js  Relay.test.js  SPV.test.js  SPVStore.test.js  ValidateSPV.test.js  ValidateSPVJs.test.js  constants.js  headers.json  headersReorgAndRetarget.json  headersWithRetarget.json  utils.js
utils/: btc_utils.go  utils.js  utils_test.go
(+53 files in other folders)
