[package]
name = "bitcoin-spv"
version = "3.0.1"
authors = ["James Prestwich <james@prestwi.ch>"]
edition = "2018"
license="LGPL-3.0-or-later"
description="Bitcoin SPV Proof evaluation"
homepage="https://github.com/summa-tx/bitcoin-spv"
repository="https://github.com/summa-tx/bitcoin-spv"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num = "0.2.0"
num-bigint = "0.2"
ripemd160 = "0.8.0"
sha2 = "0.8.0"
hex = {version = "0.4.2", optional = true}
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0.99", features = ["derive"], optional = true }

[dev-dependencies]
hex = "0.4.2"
serde_json = { version = "1.0" }
serde = { version = "1.0.99", features = ["derive"] }

[features]
default=["std"]
std=["num/std", "num-bigint/std", "serde", "serde_json", "hex/std", "sha2/std", "ripemd160/std"]
